force-app/main/default/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <description>Parent record for each event. Phase Service Appointments are linked back to this object.</description>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>AutoNumber</type>
        <displayFormat>JOB-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>