force-app/main/default/objects/Job__c/fields/Crew_Required_LoadIn__c.field-meta.xml
<CustomField>
    <fullName>Crew_Required_LoadIn__c</fullName>
    <label>Crew Required - Load-In</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>