force-app/main/default/objects/Job__c/fields/Daily_Crew_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Crew_Rate__c</fullName>
    <label>Daily Crew Rate</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
    <defaultValue>350</defaultValue>
</CustomField>