force-app/main/default/objects/Job__c/fields/Estimated_Crew_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Crew_Cost__c</fullName>
    <label>Estimated Crew Cost</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>