force-app/main/default/objects/Job__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>